@@ -2,6 +2,10 @@ ctsem news:
 
 Known bugs / limitations:
 
+Fixes: 
+- stanWplot function for trace plots while sampling with stan was not working on non windows platforms.
+
+
 16/5/2017
 #### 2.4.0 ####
 Fixes:
